<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Signup"
android:orientation="vertical"
android:gravity="center_horizontal"
android:background="@drawable/background">
<!--jasleen bains
 T00651489-->

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="120dp"
    android:layout_marginTop="100dp"
    app:srcCompat="@drawable/userlogin" />

<EditText
    android:id="@+id/username"
    android:layout_width="230dp"
    android:layout_height="40dp"
    android:layout_marginTop="50dp"
    android:background="#ffffff"
    android:paddingLeft="20dp"
    android:hint= "@string/username"/>

<EditText
    android:id="@+id/password"
    android:layout_width="230dp"
    android:layout_height="40dp"
    android:layout_marginTop="10dp"
    android:background="#ffffff"
    android:paddingLeft="20dp"
    android:hint="@string/password"/>

<EditText
    android:id="@+id/confirmpassword"
    android:layout_width="230dp"
    android:layout_height="40dp"
    android:layout_marginTop="10dp"
    android:background="#ffffff"
    android:paddingLeft="20dp"
    android:hint="@string/ConfirmPassword" />

<EditText
    android:id="@+id/FName"
    android:layout_width="230dp"
    android:layout_height="40dp"
    android:layout_marginTop="10dp"
    android:background="#ffffff"
    android:paddingLeft="20dp"
    android:hint="@string/FName"/>

<EditText
    android:id="@+id/LNAme"
    android:layout_width="230dp"
    android:layout_height="40dp"
    android:layout_marginTop="10dp"
    android:background="#ffffff"
    android:paddingLeft="20dp"
    android:hint="@string/LName" />

<Button
    android:id="@+id/register"
    android:layout_width="230dp"
    android:layout_height="40dp"
    android:layout_marginTop="10dp"
    android:background="#ffffff"
    android:text="@string/ButtonRegister"
    app:backgroundTint="#231D1D" />

<Button
    android:id="@+id/login"
    android:layout_width="112dp"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:text="@string/login"
    android:textColor="#ffffff"
    android:textStyle="bold"
    app:backgroundTint="#231D1D" />


</LinearLayout>